--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="meyer-reset.css">
-    <script src="scripts.js" defer></script>
+    <script src="scripts-v2.js" defer></script>
 </head>
 <body>
     
