Add display ctrler to render/refresh board on page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="scripts-v2.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="game-container">
+            
+        </div>
+    </div>
 </body>
 </html>
