Display game result in modal dialog

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </form>
         </div>
         <div id="game-container"></div>
+        <dialog id="result-dialog">
+            <button id="dialog-close">X</button>
+            <h1 id="result-msg"></h1>
+        </dialog>
     </div>
 </body>
 </html>
