--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
         </div>
         <div id="game-inputs">
             <form>
-                <label for="playerX">Enter Player X's name: </label>
-                <input type="text" name="playerX" id="playerX" placeholder="Player X">
-                <label for="playerO">Enter Player O's name: </label>
-                <input type="text" name="playerO" id="playerO" placeholder="Player O">
+                <div id="playerX-input">
+                    <label for="playerX">Player X name: </label>
+                    <input type="text" name="playerX" id="playerX" placeholder="Player X">
+                </div>
+                <div id="playerO-input">
+                    <label for="playerO">Player O name: </label>
+                    <input type="text" name="playerO" id="playerO" placeholder="Player O">
+                </div>
                 <button type="submit">Start Game</button>
             </form>
         </div>
