Rework gameInputs to let inputs, btn be disabled

--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
             <h3>A Two-Player Game</h3>
         </div>
         <div id="game-inputs">
-            <form>
-                <div id="playerX-input">
-                    <label for="playerX">Player X name: </label>
-                    <input type="text" name="playerX" id="playerX" placeholder="Player X">
-                </div>
-                <div id="playerO-input">
-                    <label for="playerO">Player O name: </label>
-                    <input type="text" name="playerO" id="playerO" placeholder="Player O">
-                </div>
-                <button type="submit">Start Game</button>
-            </form>
+            <div id="playerX-input">
+                <label for="playerX">Player X name: </label>
+                <input type="text" name="playerX" id="playerX" placeholder="Player X">
+            </div>
+            <div id="playerO-input">
+                <label for="playerO">Player O name: </label>
+                <input type="text" name="playerO" id="playerO" placeholder="Player O">
+            </div>
+            <button type="button" id="start-btn">Start Game</button>
         </div>
         <div id="game-container"></div>
         <dialog id="result-dialog">
