Display and update game status

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             </div>
             <button type="button" id="start-btn">Start Game</button>
         </div>
+        <div id="status">
+            <h1 id="status-msg">Let's Play!</h1>
+        </div>
         <div id="game-container"></div>
         <dialog id="result-dialog">
             <button id="dialog-close">X</button>
