Add reset and new game functionality/display

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <label for="playerO">Player O name: </label>
                 <input type="text" name="playerO" id="playerO" placeholder="Player O">
             </div>
-            <button type="button" id="start-btn">Start Game</button>
+            <button type="button" id="game-btn">Start Game</button>
         </div>
         <div id="status">
             <h1 id="status-msg">Let's Play!</h1>
