Add symbol buttons to display

--- a/index.html
+++ b/index.html
@@ -19,10 +19,24 @@
             <div id="playerX-input">
                 <label for="playerX">Player X name: </label>
                 <input type="text" name="playerX" id="playerX" placeholder="Player X">
+                <div class ="symbol-select" id="playerX-symbols">
+                    <button>X</button>
+                    <button>O</button>
+                    <button>*</button>
+                    <button class="smiley">=)</button>
+                    <button>&hearts;</button>
+                </div>
             </div>
             <div id="playerO-input">
                 <label for="playerO">Player O name: </label>
                 <input type="text" name="playerO" id="playerO" placeholder="Player O">
+                <div class ="symbol-select" id="playerO-symbols">
+                    <button>O</button>
+                    <button>X</button>
+                    <button>*</button>
+                    <button class="smiley">=)</button>
+                    <button>&hearts;</button>
+                </div>
             </div>
             <button type="button" id="game-btn">Start Game</button>
         </div>
