Add and style unique symbol selection for gameplay

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
                 <label for="playerX">Player X name: </label>
                 <input type="text" name="playerX" id="playerX" placeholder="Player X">
                 <div class ="symbol-select" id="playerX-symbols">
-                    <button>X</button>
-                    <button>O</button>
-                    <button>*</button>
-                    <button class="smiley">=)</button>
-                    <button>&hearts;</button>
+                    <button class="btn-X selected">X</button>
+                    <button class= "btn-O">O</button>
+                    <button class= "btn-*">*</button>
+                    <button class="btn-smiley">=)</button>
+                    <button class= "btn-heart">&hearts;</button>
                 </div>
             </div>
             <div id="playerO-input">
                 <label for="playerO">Player O name: </label>
                 <input type="text" name="playerO" id="playerO" placeholder="Player O">
                 <div class ="symbol-select" id="playerO-symbols">
-                    <button>O</button>
-                    <button>X</button>
-                    <button>*</button>
-                    <button class="smiley">=)</button>
-                    <button>&hearts;</button>
+                    <button class= "btn-O selected">O</button>
+                    <button class="btn-X">X</button>
+                    <button class= "btn-*">*</button>
+                    <button class="btn-smiley">=)</button>
+                    <button class= "btn-heart">&hearts;</button>
                 </div>
             </div>
             <button type="button" id="game-btn">Start Game</button>
