Change plyr x/o to 1/2, rewrite symbol select
Goal was to simplify player naming with 1/2
instead of using default symbol as name
Symbol select was reliant on DOM. Rewrote it to
store symbol chars in JS logic

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
             <h3>A Two-Player Game</h3>
         </div>
         <div id="game-inputs">
-            <div id="playerX-input">
-                <label for="playerX">Player X name: </label>
-                <input type="text" name="playerX" id="playerX" placeholder="Player X">
-                <div class ="symbol-select" id="playerX-symbols">
-                    <button class="btn-X selected">X</button>
+            <div id="player1-input">
+                <label for="player1">Player 1 name: </label>
+                <input type="text" name="player1" id="player1" placeholder="Player 1">
+                <div class ="symbol-select" id="player1-symbols">
+                    <!-- <button class="btn-X selected">X</button>
                     <button class= "btn-O">O</button>
                     <button class= "btn-*">*</button>
                     <button class="btn-smiley">=)</button>
-                    <button class= "btn-heart">&hearts;</button>
+                    <button class= "btn-heart">&hearts;</button> -->
                 </div>
             </div>
-            <div id="playerO-input">
-                <label for="playerO">Player O name: </label>
-                <input type="text" name="playerO" id="playerO" placeholder="Player O">
-                <div class ="symbol-select" id="playerO-symbols">
-                    <button class= "btn-O selected">O</button>
+            <div id="player2-input">
+                <label for="player2">Player 2 name: </label>
+                <input type="text" name="player2" id="player2" placeholder="Player 2">
+                <div class ="symbol-select" id="player2-symbols">
+                    <!-- <button class= "btn-O selected">O</button>
                     <button class="btn-X">X</button>
                     <button class= "btn-*">*</button>
                     <button class="btn-smiley">=)</button>
-                    <button class= "btn-heart">&hearts;</button>
+                    <button class= "btn-heart">&hearts;</button> -->
                 </div>
             </div>
             <button type="button" id="game-btn">Start Game</button>
