--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
                 </div>
             </div>
             <h1 id="status-msg">Let's Play!</h1>
-            <button type="button" id="game-btn">Start Game</button>
+            <button type="button" class="rounded-btn" id="game-btn">Start Game</button>
         </div>
         </div>
         <div id="game-container"></div>
         <dialog id="result-dialog">
-            <button id="dialog-close">X</button>
-            <h1 id="result-msg"></h1>
+            <div>
+                <button type="button" id="dialog-close">X</button>
+                <h1 id="result-msg"></h1>
+                <button type="button" class="rounded-btn" id="rematch-btn">Rematch</button>
+            </div>
         </dialog>
     </div>
 </body>
