Add swap-players button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h2>An Odin Project Two-Player Game</h2>
         </div>
         <div id="game-inputs">
+            <button type="button" class="rounded-btn" id="swap-players">&#8644</button>
             <div class="player-input" id="player1-input">
                 <label for="player1">Player 1 name: </label>
                 <input class="player-name" type="text" name="player1" id="player1" tabindex="1" placeholder="Player 1">
